--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework</title>
-    <link rel="stylesheet" href="../css/all.min.css">
-    <link rel="stylesheet" href="../css/homework.css">
-    <link rel="stylesheet" href="../css/aos.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/homework.css">
+    <link rel="stylesheet" href="css/aos.css">
 </head>
 <body>
     <h1>Welcome To Our Page</h1>
@@ -21,19 +21,19 @@
     </nav>
     <section class="items">
         <div class="item" data-aos="fade-out">
-            <img src="../images/ball.jpg" alt="">
+            <img src="images/ball.jpg" alt="">
             <button>open Ball</button>
         </div>
         <div class="item" data-aos="fade-out" data-aos-delay="200">
-            <img src="../images/bicke.jpg" alt="">
+            <img src="images/bicke.jpg" alt="">
             <button>open Bicke</button>
         </div>
         <div class="item" data-aos="fade-out" data-aos-delay="400">
-            <img src="../images/car.jpg" alt="">
+            <img src="images/car.jpg" alt="">
             <button>open Car</button>
         </div>
         <div class="item" data-aos="fade-out" data-aos-delay="600">
-            <img src="../images/helmit.jpg" alt="">
+            <img src="images/helmit.jpg" alt="">
             <button>open Helmit</button>
         </div>    
     </section>
@@ -46,7 +46,7 @@
             <p style="color: #ffffff; font-size: 30px; font-family: sans-serif;">&copy; 2024 Your Website. All Rights Reserved.</p>
         </div>
     </footer>
-    <script src="../js/aos.js"></script>
+    <script src="js/aos.js"></script>
     <script>
         AOS.init();
     </script>
